--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <!-- Hero Section -->
     <div class="grid">
         <div class="col-5">
-            <img src="https://github.com/kirataran/emilytigran.party/blob/9dc4fb4e90904ab50c5f4d8f2506edd60eb3c41f/cake_proofs-14.jpg" alt="Emily and Tigran" class="hero-image">
+            <img src="https://github.com/kirataran/emilytigran.party/blob/9dc4fb4e90904ab50c5f4d8f2506edd60eb3c41f/cake_proofs-14.jpg" alt="Emily and Tigran and Cosmo" class="hero-image">
         </div>
         <div class="col-7">
             <div class="text-right">
