--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="col-3"></div>
         <div class="col-9" style="max-width: 700px;">
             <p>We met in an Uber Pool six years ago, and now we're tying the knot. We'd be honored to have you celebrate this moment with us.</p>
-            <a href="YOUR_RSVP_LINK_HERE" target="_blank" class="rsvp-button">I'll be there!</a>
+            <a href="https://forms.gle/2Xr3JewmwFJTtnnd8" target="_blank" class="rsvp-button">I'll be there!</a>
         </div>
     </div>
 
